// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CompanyArticleSection Snapshot > renders with empty article correctly 1`] = `
"<section data-orientation="vertical" class="relative isolate bg-white dark:bg-gray-900">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
    <div class="">
      <!--v-if-->
      <!--v-if-->
      <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-center">Buying Advice</h2>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</section>"
`;

exports[`CompanyArticleSection Snapshot > renders with valid article content correctly 1`] = `
"<section data-orientation="vertical" class="relative isolate bg-white dark:bg-gray-900">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
    <div class="">
      <!--v-if-->
      <!--v-if-->
      <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-center">Buying Advice</h2>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <article role="article" aria-labelledby="article-title">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div role="document" class="prose dark:prose-invert mx-auto max-w-5xl">
        <h1 id="article-title">Breaking News</h1>
        <p>This is an amazing article content!</p>
      </div>
    </article>
  </div>
</section>"
`;
